working on new ui

--- a/src/main/webapp/script/recentActivity.xhtml
+++ b/src/main/webapp/script/recentActivity.xhtml
@@ -14,7 +14,7 @@
         <h:form id="activityForm">
 
 
-                <div class="panel panel-success panel-dark widget-comments hidden-xs">
+                <div class="panel panel-transparent panel-dark widget-comments hidden-xs">
                     <div class="panel-heading">
                         <span class="panel-title"><i class="panel-title-icon fa fa-comments"></i>Actividad Reciente en tus casos</span>
                     </div> <!-- / .panel-heading -->
