--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -40,32 +40,11 @@
 
             <div class="row">
                 <div class="col-md-9">
-                    <!-- Tabs -->
-                    <h:form id="tabs">
-                        <div class="search-tabs">
-                            <ul class="nav nav-tabs">
-                                <ui:repeat value="#{casoController.getAllAgentVistasItems()}" var="vista1" >
-                                    <li class="#{casoController.vista eq vista1 ? 'active':''}">
-                                        <p:commandLink id="vistalink1" ajax="true" oncomplete="$('.nav-pills, .nav-tabs').tabdrop();"
-                                                       update=":tabs :mainform:messages :formfilter :form0"
-                                                       actionListener="#{casoController.applyViewFilter(vista1)}" rendered="#{casoController.vista ne vista1}"
-                                                       value="#{vista1.nombre} (#{casoController.countItemsVista(vista1)})" />
-
-                                        <h:panelGroup rendered="#{casoController.vista eq vista1}">
-                                            <a href="#" data-toggle="tab">#{vista1.nombre} <span class="label label-info">#{casoController.countItemsVista(vista1)}</span></a>
-                                        </h:panelGroup>
-
-                                    </li>
-                                </ui:repeat>
-
-
-                            </ul> <!-- / .nav -->
-                        </div>
-
-
-
-                    </h:form>
-                    <!-- / Tabs -->
+                    
+                   <go:vistasListBt id="vistasList" 
+                                    update=":vistasList:vistasForm :mainform:messages :formfilter :form0" 
+                           controllerMBean="#{clienteController}"
+                           user="#{UserSessionBean.current}"/>
 
                     <div class="panel search-panel">
 
@@ -451,7 +430,7 @@
 
                 </div>
                 <div class="col-md-3">
-                    <h:panelGroup layout="block" styleClass="panel hidden-xs" 
+                    <h:panelGroup layout="block" styleClass="panel panel-transparent hidden-xs" 
                                   rendered="#{(not empty tagCloudBean.etiquetasByUsuario) and (not casoController.mobileClient)}">
                         <div class="panel-heading">
                             <span class="panel-title"><i class="panel-title-icon fa fa-tags"></i>Mis Tags</span>
@@ -463,7 +442,7 @@
                                 <p:commandLink actionListener="#{tagCloudBean.onEtiquetaSelected(etiquetaUser.tagId)}"
                                                oncomplete="$('.nav-pills, .nav-tabs').tabdrop();"
                                                styleClass="label label-tag label-info" value="#{etiquetaUser}"
-                                               update=":tabs :mainform:messages :form0 :formfilter:panelFilter0:panelFilter">
+                                               update=":vistasList:vistasForm :mainform:messages :form0 :formfilter:panelFilter0:panelFilter">
 
                                 </p:commandLink>&nbsp;
                             </ui:repeat>
