working on new ui

--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -43,7 +43,7 @@
                     
                    <go:vistasListBt id="vistasList" 
                                     update=":vistasList:vistasForm :mainform:messages :formfilter :form0" 
-                           controllerMBean="#{clienteController}"
+                                    controllerMBean="#{casoController}"
                            user="#{UserSessionBean.current}"/>
 
                     <div class="panel search-panel">
